// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Exchange should not render filler exchange cards 1`] = `
<DocumentFragment>
  <div
    data-testid="Exchange"
  >
    <div
      class="border-t-20 border-theme-neutral-100"
    >
      <div
        class="container mx-auto mt-10"
      >
        <h1>
          Exchange
        </h1>
        <div
          class="text-theme-neutral-700"
        >
          Trade your money safely from the comfort of your wallet.
        </div>
        <div
          class="mt-8 mb-16"
        >
          <div
            class="relative"
          >
            <div
              class="absolute w-auto -top-12 right-0 space-x-2 swiper-pagination swiper-pagination-clickable swiper-pagination-bullets"
            />
            <div
              class="swiper-container swiper-container-initialized swiper-container-horizontal"
              style="height: 155px;"
            >
              <div
                class="h-full swiper-wrapper grid grid-cols-8 gap-4"
                style="webkit-transition-duration: 0ms; transition-duration: 0ms; webkit-transform: translate3d(NaNpx, 0px, 0px); transform: translate3d(NaNpx, 0px, 0px);"
              >
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hGLWbv border-theme-primary-100 hover:border-theme-background"
                    data-testid="Exchange__exchange-card-changenow-plugin"
                  >
                    <div
                      class="my-auto px-12 font-semibold"
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="absolute top-4 right-2 text-theme-primary-200"
                        >
                          <div
                            class="relative"
                            data-testid="dropdown__toggle"
                          >
                            <button
                              class="float-right outline-none focus:outline-none"
                            >
                              <div
                                class="sc-AxirZ eEbZjj"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </button>
                          </div>
                        </div>
                        <div
                          class="mr-4"
                        >
                          <svg
                            class="w-12 h-12"
                          >
                            changenow-logo.svg
                          </svg>
                        </div>
                        <div
                          class="truncate"
                        >
                          ChangeNOW Plugin
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hGLWbv border-theme-primary-100 hover:border-theme-background"
                    data-testid="Exchange__exchange-card-binance"
                  >
                    <div
                      class="my-auto px-12 font-semibold"
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="absolute top-4 right-2 text-theme-primary-200"
                        >
                          <div
                            class="relative"
                            data-testid="dropdown__toggle"
                          >
                            <button
                              class="float-right outline-none focus:outline-none"
                            >
                              <div
                                class="sc-AxirZ eEbZjj"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </button>
                          </div>
                        </div>
                        <div
                          class="mr-4"
                        >
                          <svg
                            class="w-12 h-12"
                          >
                            changenow-logo.svg
                          </svg>
                        </div>
                        <div
                          class="truncate"
                        >
                          Binance
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hGLWbv border-theme-primary-100 hover:border-theme-background"
                    data-testid="Exchange__exchange-card-atomars"
                  >
                    <div
                      class="my-auto px-12 font-semibold"
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="absolute top-4 right-2 text-theme-primary-200"
                        >
                          <div
                            class="relative"
                            data-testid="dropdown__toggle"
                          >
                            <button
                              class="float-right outline-none focus:outline-none"
                            >
                              <div
                                class="sc-AxirZ eEbZjj"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </button>
                          </div>
                        </div>
                        <div
                          class="mr-4"
                        >
                          <svg
                            class="w-12 h-12"
                          >
                            changenow-logo.svg
                          </svg>
                        </div>
                        <div
                          class="truncate"
                        >
                          Atomars
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hGLWbv col-span-2 border-theme-primary-100"
                    data-testid="Exchange__add-exchange-card"
                  >
                    <div
                      class="flex items-center my-auto px-12 font-semibold text-theme-primary-600"
                    >
                      <div
                        class="sc-AxirZ iQaTP p-4 bg-theme-primary-100 rounded-lg mr-4"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          plus.svg
                        </svg>
                      </div>
                      Add Exchange
                    </div>
                  </div>
                </div>
              </div>
              <span
                aria-atomic="true"
                aria-live="assertive"
                class="swiper-notification"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border-t-20 border-theme-neutral-100"
    >
      <div
        class="text-center"
      >
        <svg
          class="mx-auto mt-20"
        >
          exchange-cards-banner.svg
        </svg>
        <div
          class="mt-6 text-theme-neutral-700"
        >
          Select one of the exchanges you have installed
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Exchange should open & close add exchange modal 1`] = `
<DocumentFragment>
  <div
    data-testid="Exchange"
  >
    <div
      class="border-t-20 border-theme-neutral-100"
    >
      <div
        class="container mx-auto mt-10"
      >
        <h1>
          Exchange
        </h1>
        <div
          class="text-theme-neutral-700"
        >
          Trade your money safely from the comfort of your wallet.
        </div>
        <div
          class="mt-8 mb-16"
        >
          <div
            class="relative"
          >
            <div
              class="absolute w-auto -top-12 right-0 space-x-2 swiper-pagination swiper-pagination-clickable swiper-pagination-bullets"
            />
            <div
              class="swiper-container swiper-container-initialized swiper-container-horizontal"
              style="height: 155px;"
            >
              <div
                class="h-full swiper-wrapper grid grid-cols-8 gap-4"
                style="webkit-transition-duration: 0ms; transition-duration: 0ms; webkit-transform: translate3d(NaNpx, 0px, 0px); transform: translate3d(NaNpx, 0px, 0px);"
              >
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hGLWbv border-theme-primary-100 hover:border-theme-background"
                    data-testid="Exchange__exchange-card-changenow-plugin"
                  >
                    <div
                      class="my-auto px-12 font-semibold"
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="absolute top-4 right-2 text-theme-primary-200"
                        >
                          <div
                            class="relative"
                            data-testid="dropdown__toggle"
                          >
                            <button
                              class="float-right outline-none focus:outline-none"
                            >
                              <div
                                class="sc-AxirZ eEbZjj"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </button>
                          </div>
                        </div>
                        <div
                          class="mr-4"
                        >
                          <svg
                            class="w-12 h-12"
                          >
                            changenow-logo.svg
                          </svg>
                        </div>
                        <div
                          class="truncate"
                        >
                          ChangeNOW Plugin
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hGLWbv border-theme-primary-100 hover:border-theme-background"
                    data-testid="Exchange__exchange-card-binance"
                  >
                    <div
                      class="my-auto px-12 font-semibold"
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="absolute top-4 right-2 text-theme-primary-200"
                        >
                          <div
                            class="relative"
                            data-testid="dropdown__toggle"
                          >
                            <button
                              class="float-right outline-none focus:outline-none"
                            >
                              <div
                                class="sc-AxirZ eEbZjj"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </button>
                          </div>
                        </div>
                        <div
                          class="mr-4"
                        >
                          <svg
                            class="w-12 h-12"
                          >
                            changenow-logo.svg
                          </svg>
                        </div>
                        <div
                          class="truncate"
                        >
                          Binance
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hGLWbv border-theme-primary-100 hover:border-theme-background"
                    data-testid="Exchange__exchange-card-atomars"
                  >
                    <div
                      class="my-auto px-12 font-semibold"
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="absolute top-4 right-2 text-theme-primary-200"
                        >
                          <div
                            class="relative"
                            data-testid="dropdown__toggle"
                          >
                            <button
                              class="float-right outline-none focus:outline-none"
                            >
                              <div
                                class="sc-AxirZ eEbZjj"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </button>
                          </div>
                        </div>
                        <div
                          class="mr-4"
                        >
                          <svg
                            class="w-12 h-12"
                          >
                            changenow-logo.svg
                          </svg>
                        </div>
                        <div
                          class="truncate"
                        >
                          Atomars
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hGLWbv col-span-2 border-theme-primary-100"
                    data-testid="Exchange__add-exchange-card"
                  >
                    <div
                      class="flex items-center my-auto px-12 font-semibold text-theme-primary-600"
                    >
                      <div
                        class="sc-AxirZ iQaTP p-4 bg-theme-primary-100 rounded-lg mr-4"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          plus.svg
                        </svg>
                      </div>
                      Add Exchange
                    </div>
                  </div>
                </div>
              </div>
              <span
                aria-atomic="true"
                aria-live="assertive"
                class="swiper-notification"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border-t-20 border-theme-neutral-100"
    >
      <div
        class="text-center"
      >
        <svg
          class="mx-auto mt-20"
        >
          exchange-cards-banner.svg
        </svg>
        <div
          class="mt-6 text-theme-neutral-700"
        >
          Select one of the exchanges you have installed
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Exchange should open & close add exchange modal when no existing exchanges 1`] = `
<DocumentFragment>
  <div
    data-testid="Exchange"
  >
    <div
      class="border-t-20 border-theme-neutral-100"
    >
      <div
        class="container mx-auto mt-10"
      >
        <h1>
          Exchange
        </h1>
        <div
          class="text-theme-neutral-700"
        >
          Trade your money safely from the comfort of your wallet.
        </div>
        <div
          class="grid grid-cols-8 gap-4 mt-8 mb-16"
        >
          <div
            class="flex flex-col col-span-6 border-2 border-theme-primary-100 rounded-lg h-32"
          >
            <div
              class="flex flex-col text-center m-auto"
            >
              <span
                class="font-semibold"
              >
                Your Exchange List
              </span>
              <span
                class="text-theme-neutral-500 text-sm m-auto"
              >
                You don't have an Exchange yet
              </span>
            </div>
          </div>
          <div
            class="sc-AxgMl hGLWbv col-span-2 border-theme-primary-100"
            data-testid="Exchange__add-exchange-card"
          >
            <div
              class="flex items-center my-auto px-12 font-semibold text-theme-primary-600"
            >
              <div
                class="sc-AxirZ iQaTP p-4 bg-theme-primary-100 rounded-lg mr-4"
                height="1em"
                width="1em"
              >
                <svg>
                  plus.svg
                </svg>
              </div>
              Add Exchange
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border-t-20 border-theme-neutral-100"
    >
      <svg
        class="mx-auto mt-16"
      >
        no-exchanges-banner.svg
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Exchange should render 1`] = `
<DocumentFragment>
  <div
    data-testid="Exchange"
  >
    <div
      class="border-t-20 border-theme-neutral-100"
    >
      <div
        class="container mx-auto mt-10"
      >
        <h1>
          Exchange
        </h1>
        <div
          class="text-theme-neutral-700"
        >
          Trade your money safely from the comfort of your wallet.
        </div>
        <div
          class="grid grid-cols-8 gap-4 mt-8 mb-16"
        >
          <div
            class="flex flex-col col-span-6 border-2 border-theme-primary-100 rounded-lg h-32"
          >
            <div
              class="flex flex-col text-center m-auto"
            >
              <span
                class="font-semibold"
              >
                Your Exchange List
              </span>
              <span
                class="text-theme-neutral-500 text-sm m-auto"
              >
                You don't have an Exchange yet
              </span>
            </div>
          </div>
          <div
            class="sc-AxgMl hGLWbv col-span-2 border-theme-primary-100"
            data-testid="Exchange__add-exchange-card"
          >
            <div
              class="flex items-center my-auto px-12 font-semibold text-theme-primary-600"
            >
              <div
                class="sc-AxirZ iQaTP p-4 bg-theme-primary-100 rounded-lg mr-4"
                height="1em"
                width="1em"
              >
                <svg>
                  plus.svg
                </svg>
              </div>
              Add Exchange
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border-t-20 border-theme-neutral-100"
    >
      <svg
        class="mx-auto mt-16"
      >
        no-exchanges-banner.svg
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Exchange should render with exchanges 1`] = `
<DocumentFragment>
  <div
    data-testid="Exchange"
  >
    <div
      class="border-t-20 border-theme-neutral-100"
    >
      <div
        class="container mx-auto mt-10"
      >
        <h1>
          Exchange
        </h1>
        <div
          class="text-theme-neutral-700"
        >
          Trade your money safely from the comfort of your wallet.
        </div>
        <div
          class="mt-8 mb-16"
        >
          <div
            class="relative"
          >
            <div
              class="absolute w-auto -top-12 right-0 space-x-2 swiper-pagination swiper-pagination-clickable swiper-pagination-bullets"
            />
            <div
              class="swiper-container swiper-container-initialized swiper-container-horizontal"
              style="height: 155px;"
            >
              <div
                class="h-full swiper-wrapper grid grid-cols-8 gap-4"
                style="webkit-transition-duration: 0ms; transition-duration: 0ms; webkit-transform: translate3d(NaNpx, 0px, 0px); transform: translate3d(NaNpx, 0px, 0px);"
              >
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hGLWbv border-theme-primary-100 hover:border-theme-background"
                    data-testid="Exchange__exchange-card-changenow-plugin"
                  >
                    <div
                      class="my-auto px-12 font-semibold"
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="absolute top-4 right-2 text-theme-primary-200"
                        >
                          <div
                            class="relative"
                            data-testid="dropdown__toggle"
                          >
                            <button
                              class="float-right outline-none focus:outline-none"
                            >
                              <div
                                class="sc-AxirZ eEbZjj"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </button>
                          </div>
                        </div>
                        <div
                          class="mr-4"
                        >
                          <svg
                            class="w-12 h-12"
                          >
                            changenow-logo.svg
                          </svg>
                        </div>
                        <div
                          class="truncate"
                        >
                          ChangeNOW Plugin
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hGLWbv border-theme-primary-100 hover:border-theme-background"
                    data-testid="Exchange__exchange-card-binance"
                  >
                    <div
                      class="my-auto px-12 font-semibold"
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="absolute top-4 right-2 text-theme-primary-200"
                        >
                          <div
                            class="relative"
                            data-testid="dropdown__toggle"
                          >
                            <button
                              class="float-right outline-none focus:outline-none"
                            >
                              <div
                                class="sc-AxirZ eEbZjj"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </button>
                          </div>
                        </div>
                        <div
                          class="mr-4"
                        >
                          <svg
                            class="w-12 h-12"
                          >
                            changenow-logo.svg
                          </svg>
                        </div>
                        <div
                          class="truncate"
                        >
                          Binance
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hGLWbv border-theme-primary-100 hover:border-theme-background"
                    data-testid="Exchange__exchange-card-atomars"
                  >
                    <div
                      class="my-auto px-12 font-semibold"
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="absolute top-4 right-2 text-theme-primary-200"
                        >
                          <div
                            class="relative"
                            data-testid="dropdown__toggle"
                          >
                            <button
                              class="float-right outline-none focus:outline-none"
                            >
                              <div
                                class="sc-AxirZ eEbZjj"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </button>
                          </div>
                        </div>
                        <div
                          class="mr-4"
                        >
                          <svg
                            class="w-12 h-12"
                          >
                            changenow-logo.svg
                          </svg>
                        </div>
                        <div
                          class="truncate"
                        >
                          Atomars
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hGLWbv border-theme-primary-100 hover:border-theme-background"
                    data-testid="Exchange__exchange-card-okex"
                  >
                    <div
                      class="my-auto px-12 font-semibold"
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="absolute top-4 right-2 text-theme-primary-200"
                        >
                          <div
                            class="relative"
                            data-testid="dropdown__toggle"
                          >
                            <button
                              class="float-right outline-none focus:outline-none"
                            >
                              <div
                                class="sc-AxirZ eEbZjj"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </button>
                          </div>
                        </div>
                        <div
                          class="mr-4"
                        >
                          <svg
                            class="w-12 h-12"
                          >
                            changenow-logo.svg
                          </svg>
                        </div>
                        <div
                          class="truncate"
                        >
                          OKEx
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hGLWbv col-span-2 border-theme-primary-100"
                    data-testid="Exchange__add-exchange-card"
                  >
                    <div
                      class="flex items-center my-auto px-12 font-semibold text-theme-primary-600"
                    >
                      <div
                        class="sc-AxirZ iQaTP p-4 bg-theme-primary-100 rounded-lg mr-4"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          plus.svg
                        </svg>
                      </div>
                      Add Exchange
                    </div>
                  </div>
                </div>
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hGLWbv border-theme-primary-100"
                    data-testid="Exchange__blank-card"
                  >
                    <div
                      class="flex items-center my-auto px-12 font-semibold text-theme-primary-100"
                    >
                      <div
                        class="w-12 h-12 border-2 border-theme-primary-100 rounded-lg mr-4"
                      />
                      Exchange Name
                    </div>
                  </div>
                </div>
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hGLWbv border-theme-primary-100"
                    data-testid="Exchange__blank-card"
                  >
                    <div
                      class="flex items-center my-auto px-12 font-semibold text-theme-primary-100"
                    >
                      <div
                        class="w-12 h-12 border-2 border-theme-primary-100 rounded-lg mr-4"
                      />
                      Exchange Name
                    </div>
                  </div>
                </div>
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hGLWbv border-theme-primary-100"
                    data-testid="Exchange__blank-card"
                  >
                    <div
                      class="flex items-center my-auto px-12 font-semibold text-theme-primary-100"
                    >
                      <div
                        class="w-12 h-12 border-2 border-theme-primary-100 rounded-lg mr-4"
                      />
                      Exchange Name
                    </div>
                  </div>
                </div>
              </div>
              <span
                aria-atomic="true"
                aria-live="assertive"
                class="swiper-notification"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border-t-20 border-theme-neutral-100"
    >
      <div
        class="text-center"
      >
        <svg
          class="mx-auto mt-20"
        >
          exchange-cards-banner.svg
        </svg>
        <div
          class="mt-6 text-theme-neutral-700"
        >
          Select one of the exchanges you have installed
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Exchange should select exchange 1`] = `
<DocumentFragment>
  <div
    data-testid="Exchange"
  >
    <div
      class="border-t-20 border-theme-neutral-100"
    >
      <div
        class="container mx-auto mt-10"
      >
        <h1>
          Exchange
        </h1>
        <div
          class="text-theme-neutral-700"
        >
          Trade your money safely from the comfort of your wallet.
        </div>
        <div
          class="mt-8 mb-16"
        >
          <div
            class="relative"
          >
            <div
              class="absolute w-auto -top-12 right-0 space-x-2 swiper-pagination swiper-pagination-clickable swiper-pagination-bullets"
            />
            <div
              class="swiper-container swiper-container-initialized swiper-container-horizontal"
              style="height: 155px;"
            >
              <div
                class="h-full swiper-wrapper grid grid-cols-8 gap-4"
                style="webkit-transition-duration: 0ms; transition-duration: 0ms; webkit-transform: translate3d(NaNpx, 0px, 0px); transform: translate3d(NaNpx, 0px, 0px);"
              >
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hGLWbv bg-theme-success-100 border-theme-success-300 hover:border-theme-success-100"
                    data-testid="Exchange__exchange-card-changenow-plugin"
                  >
                    <div
                      class="my-auto px-12 font-semibold"
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="absolute top-4 right-2 text-theme-primary-200"
                        >
                          <div
                            class="relative"
                            data-testid="dropdown__toggle"
                          >
                            <button
                              class="float-right outline-none focus:outline-none"
                            >
                              <div
                                class="sc-AxirZ eEbZjj"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </button>
                          </div>
                        </div>
                        <div
                          class="mr-4"
                        >
                          <svg
                            class="w-12 h-12"
                          >
                            changenow-logo.svg
                          </svg>
                        </div>
                        <div
                          class="truncate"
                        >
                          ChangeNOW Plugin
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hGLWbv border-theme-primary-100 hover:border-theme-background"
                    data-testid="Exchange__exchange-card-binance"
                  >
                    <div
                      class="my-auto px-12 font-semibold"
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="absolute top-4 right-2 text-theme-primary-200"
                        >
                          <div
                            class="relative"
                            data-testid="dropdown__toggle"
                          >
                            <button
                              class="float-right outline-none focus:outline-none"
                            >
                              <div
                                class="sc-AxirZ eEbZjj"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </button>
                          </div>
                        </div>
                        <div
                          class="mr-4"
                        >
                          <svg
                            class="w-12 h-12"
                          >
                            changenow-logo.svg
                          </svg>
                        </div>
                        <div
                          class="truncate"
                        >
                          Binance
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hGLWbv border-theme-primary-100 hover:border-theme-background"
                    data-testid="Exchange__exchange-card-atomars"
                  >
                    <div
                      class="my-auto px-12 font-semibold"
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="absolute top-4 right-2 text-theme-primary-200"
                        >
                          <div
                            class="relative"
                            data-testid="dropdown__toggle"
                          >
                            <button
                              class="float-right outline-none focus:outline-none"
                            >
                              <div
                                class="sc-AxirZ eEbZjj"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </button>
                          </div>
                        </div>
                        <div
                          class="mr-4"
                        >
                          <svg
                            class="w-12 h-12"
                          >
                            changenow-logo.svg
                          </svg>
                        </div>
                        <div
                          class="truncate"
                        >
                          Atomars
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hGLWbv col-span-2 border-theme-primary-100"
                    data-testid="Exchange__add-exchange-card"
                  >
                    <div
                      class="flex items-center my-auto px-12 font-semibold text-theme-primary-600"
                    >
                      <div
                        class="sc-AxirZ iQaTP p-4 bg-theme-primary-100 rounded-lg mr-4"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          plus.svg
                        </svg>
                      </div>
                      Add Exchange
                    </div>
                  </div>
                </div>
              </div>
              <span
                aria-atomic="true"
                aria-live="assertive"
                class="swiper-notification"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border-t-20 border-theme-neutral-100"
    >
      <div
        class="text-center"
      >
        <svg
          class="mx-auto mt-20"
        >
          exchange-cards-banner.svg
        </svg>
        <div
          class="mt-6 text-theme-neutral-700"
        >
          Select one of the exchanges you have installed
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
